--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "clarifai": "^2.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-parallax-tilt": "^1.4.67",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.0",
-    "react-tilt": "^0.1.4",
     "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
   },
